--- a/ScrumWeb/Content/Site.css
+++ b/ScrumWeb/Content/Site.css
@@ -17,3 +17,120 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/*Own css*/
+
+.fill {
+    position: relative;
+    min-height: 75px;
+    min-width: 100% !important;
+    min-height: 125px;
+    top: 15px;
+    cursor: pointer;
+    border-left: 2px solid #262728;
+    border-top: 15px solid #262728;
+    border-right: 2px solid #262728;
+    border-bottom: 15px solid #262728;
+    border-radius: 15px 15px 15px 15px;
+    margin-bottom: 25px;
+    background-color: #262728;
+}
+
+.fill textarea {
+    min-width: 100%;
+    text-align: center;
+    background-color: #262728;
+    color: #a7a7b3;
+    border: none;
+    overflow: auto;
+    outline: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    resize: none;
+}
+
+
+
+.hold {
+    border: solid 5px #ccc;
+}
+
+.empty {
+    display: inline-block;
+    height: 160px;
+    width: 160px;
+    /*margin: 10px;*/
+    /*border: solid 10px #262728 !important;*/
+    border-left: 2px solid #262728;
+    border-top: 15px solid #1a1a1b;
+    border-right: 2px solid #262728;
+    border-bottom: 15px solid #1a1a1b;
+    border-radius: 15px 15px 15px 15px;
+    background: #191a1bf0;
+    min-height: 750px;
+    margin-bottom: 50px;
+}
+
+.hovered {
+    background: #a7a7b3;
+    border-style: none;
+}
+
+.navbar {
+    background-color: #262728 !important;
+}
+
+.navbar li {
+    text-align: center;
+}
+
+.createBtn {
+    text-align: center;
+}
+
+.actionLinks {
+    text-align: center;
+    background-color: #262728;
+}
+
+.actionLinks a {
+    color: #a7a7b3;
+}
+
+body {
+    background-color: #191a1bf0 !important;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    color: #a7a7b3 !important;
+}
+
+.createBtn a {
+    font-size: 65px;
+    font-weight: 900;
+    color: #65b74a !important;
+}
+
+.btn {
+    color: white;
+}
+
+.detailsBtn {
+    margin-left:30px;
+    margin-right: 30px;
+}
+
+#RememberMe label {
+    color: #65b74a;
+}
+
+.form-control {
+    background-color: #262728 !important;
+    border-color: #ced4da17 !important;
+    color: #ced4da !important;
+}
+
+dt, dd {
+    color: #a7a7b3;
+}
