--- a/ScrumWeb/Views/Iterations/Index.cshtml
+++ b/ScrumWeb/Views/Iterations/Index.cshtml
@@ -4,8 +4,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
+<br />
+<h2>Your Projects</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
