--- a/ScrumWeb/Content/Site.css
+++ b/ScrumWeb/Content/Site.css
@@ -48,6 +48,7 @@ textarea {
     -moz-box-shadow: none;
     box-shadow: none;
     resize: none;
+    overflow-x: hidden;
 }
 
 
@@ -116,9 +117,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: white;
 }
 
-.detailsBtn {
-    margin-left:30px;
-    margin-right: 30px;
+.actionLinksBtn {
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #RememberMe label {
