--- a/ScrumWeb/Content/Site.css
+++ b/ScrumWeb/Content/Site.css
@@ -132,6 +132,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: #ced4da !important;
 }
 
-dt, dd {
+dt, dd, th, td {
     color: #a7a7b3;
 }
