--- a/ScrumWeb/Content/Site.css
+++ b/ScrumWeb/Content/Site.css
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .createBtn a {
-    font-size: 65px;
+    font-size: 50px;
     font-weight: 900;
     color: #65b74a !important;
 }
@@ -139,4 +139,25 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 dt, dd, th, td {
     color: #a7a7b3;
+}
+
+
+.headline h2, .headline p {
+    display: inline;
+    vertical-align: top;
+    font-family: 'Open Sans', sans-serif;
+    /*font-size: 16px;*/
+    line-height: 28px;
+}
+
+.headline h2 {
+    font-weight: bold;
+}
+
+.headline p {
+    float: right;
+}
+
+hr {
+    border-color: #dee2e6;
 }
