Titles updated on all views

--- a/ScrumWeb/Views/Iterations/Delete.cshtml
+++ b/ScrumWeb/Views/Iterations/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Iterations
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete iteration";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
