--- a/ScrumWeb/Views/Iterations/Details.cshtml
+++ b/ScrumWeb/Views/Iterations/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Iterations
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details about iteration";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
