--- a/ScrumWeb/Views/Iterations/Index.cshtml
+++ b/ScrumWeb/Views/Iterations/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ScrumWeb.Models.Iterations>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Iterations: " + User.Identity.Name;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @*INTRO SECTION START*@
