--- a/ScrumWeb/Views/Projects/Index.cshtml
+++ b/ScrumWeb/Views/Projects/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ScrumWeb.Models.Projects>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Projects: " + User.Identity.Name;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @*INTRO SECTION START*@
