--- a/ScrumWeb/Views/Tasks/Create.cshtml
+++ b/ScrumWeb/Views/Tasks/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Tasks
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create new task";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
