--- a/ScrumWeb/Views/Tasks/Delete.cshtml
+++ b/ScrumWeb/Views/Tasks/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Tasks
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete task";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
