--- a/ScrumWeb/Views/Tasks/Details.cshtml
+++ b/ScrumWeb/Views/Tasks/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Tasks
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Details about task";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
