--- a/ScrumWeb/Views/Tasks/Edit.cshtml
+++ b/ScrumWeb/Views/Tasks/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Tasks
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit task";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
