--- a/ScrumWeb/Views/Iterations/Create.cshtml
+++ b/ScrumWeb/Views/Iterations/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Iterations
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create new iteration";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
