--- a/ScrumWeb/Views/Iterations/Edit.cshtml
+++ b/ScrumWeb/Views/Iterations/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Iterations
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit iteration";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
