--- a/ScrumWeb/Views/Projects/Create.cshtml
+++ b/ScrumWeb/Views/Projects/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Projects
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create new project";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
