--- a/ScrumWeb/Views/Projects/Delete.cshtml
+++ b/ScrumWeb/Views/Projects/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Projects
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete project";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
