--- a/ScrumWeb/Views/Projects/Edit.cshtml
+++ b/ScrumWeb/Views/Projects/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ScrumWeb.Models.Projects
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit project";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
